<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.movie.home.HomeFragment">

    <TextView
        android:id="@+id/tv_welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/welcome_title"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/color_primary"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_welcome_title"
        android:text=""
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/color_primary"
        android:textSize="16sp"
        />


    <TextView
        android:id="@+id/tv_title_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/popular_movies"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/color_primary"
        android:textSize="20sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="12dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_popular"
        />

    <TextView
        android:id="@+id/tv_title_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_list_popular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/top_rated_movies"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/color_primary"
        android:textSize="20sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_top_rated"
        />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Error" />
</androidx.constraintlayout.widget.ConstraintLayout>